Fix mobile overflow

--- a/style.css
+++ b/style.css
@@ -2,4 +2,5 @@
     width: 100%;
     height: 100vh;
     background-size: cover;
+    overflow: hidden;
 }
